--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "pyannote-audio"]
-    path = pyannote-audio
-    url = https://github.com/neleSuffo/pyannote-audio
+	path = pyannote-audio
+	url = https://github.com/neleSuffo/pyannote-audio.git
